[gd_scene format=3 uid="uid://bidomgm7ctimo"]

[ext_resource type="Script" uid="uid://mmlhjkrax86p" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Script" uid="uid://dgbfe0a7um58p" path="res://scripts/level.gd" id="2_dinhu"]
[ext_resource type="Resource" uid="uid://bg5oo5ufyg4tt" path="res://ressources/levels/Level_01.tres" id="3_kvuet"]
[ext_resource type="Resource" uid="uid://cdtuk68hjrbrp" path="res://ressources/levels/Level_02.tres" id="4_trtic"]
[ext_resource type="Resource" uid="uid://mpwrgmhuajkv" path="res://ressources/levels/Level_03.tres" id="5_ir15t"]
[ext_resource type="Resource" uid="uid://n5i6rfjjq66n" path="res://ressources/levels/Level_04.tres" id="6_ca42v"]
[ext_resource type="Resource" uid="uid://dtquddt3in2h" path="res://ressources/levels/Level_05.tres" id="7_rysoc"]
[ext_resource type="Resource" uid="uid://dpw8ll42ak1n3" path="res://ressources/levels/Level_06.tres" id="8_ssvqc"]
[ext_resource type="Resource" uid="uid://bqfv8ft6wtg1u" path="res://ressources/levels/Level_07.tres" id="9_264po"]
[ext_resource type="Resource" uid="uid://bw3mxnl7w0jk4" path="res://ressources/levels/Level_08.tres" id="10_1kice"]
[ext_resource type="Resource" uid="uid://dtxdcvfrot2s8" path="res://ressources/levels/Level_09.tres" id="11_5newe"]
[ext_resource type="Resource" uid="uid://dmoqaibjq630q" path="res://ressources/levels/Level_10.tres" id="12_37s47"]
[ext_resource type="PackedScene" uid="uid://dmtg1nin4bq1" path="res://scenes/character_spawner.tscn" id="13_kvuet"]
[ext_resource type="Resource" uid="uid://bor17ybdjxdbg" path="res://ressources/levels/Level_11.tres" id="13_qnb83"]
[ext_resource type="Texture2D" uid="uid://dbarlmfg5qyvo" path="res://assets/dance_floor/dance_floor.png" id="13_rysoc"]
[ext_resource type="Resource" uid="uid://w8m0and4ilb1" path="res://ressources/levels/Level_12.tres" id="14_sww3w"]
[ext_resource type="Script" uid="uid://c2nd17karykng" path="res://scripts/cheat_ui.gd" id="14_trtic"]
[ext_resource type="PackedScene" uid="uid://bf01jl6xk7ctv" path="res://scenes/mask.tscn" id="15_ir15t"]
[ext_resource type="Resource" uid="uid://bd50wc4eyi54s" path="res://ressources/levels/Level_13.tres" id="15_suyxu"]
[ext_resource type="PackedScene" uid="uid://57jg3jacwwkl" path="res://scenes/info_flash.tscn" id="16_ca42v"]
[ext_resource type="Resource" uid="uid://cqai6mpfuip2q" path="res://ressources/levels/Level_14.tres" id="16_sgl2t"]
[ext_resource type="Resource" uid="uid://culci02rvft0q" path="res://ressources/levels/Level_15.tres" id="17_qouja"]
[ext_resource type="Resource" uid="uid://brm7ma0khlv8o" path="res://ressources/levels/Level_16.tres" id="18_wljb1"]
[ext_resource type="Resource" uid="uid://c2jby6584or6p" path="res://ressources/levels/Level_17.tres" id="19_v2yb1"]
[ext_resource type="Resource" uid="uid://bm1k6fly6ak3c" path="res://ressources/levels/Level_18.tres" id="20_js0lu"]
[ext_resource type="Resource" uid="uid://cbms30bucsbpy" path="res://ressources/levels/Level_19.tres" id="21_gxtfn"]
[ext_resource type="Resource" uid="uid://b6poouwkkioih" path="res://ressources/levels/Level_20.tres" id="22_twgab"]
[ext_resource type="PackedScene" uid="uid://dxrydp6dwoffm" path="res://scenes/disco_ball.tscn" id="24_suyxu"]
[ext_resource type="Theme" uid="uid://bv1c2mvbc8mml" path="res://ressources/themes/info_flash_richtext.tres" id="28_sgl2t"]
[ext_resource type="PackedScene" uid="uid://dbpa350c6x4fh" path="res://scenes/curtains.tscn" id="28_sww3w"]
[ext_resource type="Script" path="res://scenes/level_counter.gd" id="29_qouja"]

[sub_resource type="Theme" id="Theme_qouja"]

[node name="Game" type="Node2D" unique_id=607520342]
script = ExtResource("1_uwrxv")
levels = Array[ExtResource("2_dinhu")]([ExtResource("3_kvuet"), ExtResource("4_trtic"), ExtResource("5_ir15t"), ExtResource("6_ca42v"), ExtResource("7_rysoc"), ExtResource("8_ssvqc"), ExtResource("9_264po"), ExtResource("10_1kice"), ExtResource("11_5newe"), ExtResource("12_37s47"), ExtResource("13_qnb83"), ExtResource("14_sww3w"), ExtResource("15_suyxu"), ExtResource("16_sgl2t"), ExtResource("17_qouja"), ExtResource("18_wljb1"), ExtResource("19_v2yb1"), ExtResource("20_js0lu"), ExtResource("21_gxtfn"), ExtResource("22_twgab")])

[node name="Camera2D" type="Camera2D" parent="." unique_id=1162958084]
position = Vector2(960, 540)

[node name="DanceFloor" type="Node2D" parent="." unique_id=1351716180]

[node name="DanceFloorSprite2D" type="Sprite2D" parent="DanceFloor" unique_id=978323076]
position = Vector2(960, 540)
scale = Vector2(0.25, 0.25)
texture = ExtResource("13_rysoc")

[node name="CharacterSpawner" parent="." unique_id=1560401905 instance=ExtResource("13_kvuet")]
y_sort_enabled = true

[node name="CheatUI" type="HBoxContainer" parent="." unique_id=1033743999]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("14_trtic")

[node name="Panel" type="Panel" parent="CheatUI" unique_id=1876922649]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Mask" parent="CheatUI/Panel" unique_id=1409669806 instance=ExtResource("15_ir15t")]
position = Vector2(50, 50)
scale = Vector2(0.1, 0.1)

[node name="Label" type="Label" parent="CheatUI" unique_id=1398786224]
layout_mode = 2
text = "Current level:"

[node name="Button" type="Button" parent="CheatUI" unique_id=1672822306]
layout_mode = 2
text = "Next Level"

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1744711347]

[node name="InfoFlash" parent="CanvasLayer" unique_id=1219634045 instance=ExtResource("16_ca42v")]
unique_name_in_owner = true
theme = SubResource("Theme_qouja")

[node name="LevelCounter" type="RichTextLabel" parent="CanvasLayer" unique_id=612534218]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.5
offset_right = 148.49951
offset_bottom = 182.0
grow_horizontal = 2
theme = ExtResource("28_sgl2t")
text = "Level Count : "
horizontal_alignment = 1
script = ExtResource("29_qouja")

[node name="disco_ball" parent="." unique_id=1477989180 instance=ExtResource("24_suyxu")]
position = Vector2(960, -3.9999924)
scale = Vector2(0.2, 0.2)

[node name="Curtains" parent="." unique_id=914103840 instance=ExtResource("28_sww3w")]

[connection signal="level_loaded" from="." to="CheatUI" method="on_level_loaded"]
[connection signal="pressed" from="CheatUI/Button" to="." method="next_level"]
